--- a/workflows/snake.yml
+++ b/workflows/snake.yml
@@ -2,7 +2,7 @@ name: generate snake animation
 on:
   schedule:
 #     - cron: "0 0 * * *" 
-#     - cron: "0 40 10 * * ?" 
+    - cron: "0 40 10 * * ?" 
   workflow_dispatch:
 jobs:
   generate:
